# assistive-autonomous-navigation

./: .gitignore  LICENSE  README.md
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/msg/: Funcionarios.msg
beginner_tutorials/scripts/: listener.py  listener2.py  pure_pursuit.py  talker.py  talker2.py
p3dx_mapping/: CMakeLists.txt  package.xml
p3dx_mapping/launch/: full_mapping.launch  mapeamento.launch  octomap_hector.launch  rtabmap.launch  rtabmap_mapping.launch
p3dx_mapping/scripts/: teleop_seguro_lidar.py
p3dx_mapping/worlds/: room.world
pioneer_p3dx_model/p3dx_control/: CMakeLists.txt  package.xml
pioneer_p3dx_model/p3dx_control/launch/: control.launch
pioneer_p3dx_model/p3dx_control/scripts/: odom_shifter.py
pioneer_p3dx_model/p3dx_description/launch/: description.launch
pioneer_p3dx_model/p3dx_description/urdf/p3dx/: pioneer3dx_plugins.xacro
pioneer_p3dx_model/p3dx_gazebo/launch/: p3dx_gazebo.launch  pioneer3dx.rviz  spawn_p3dx.launch
